# Hand-written parallel BLAS — kind10 (REAL(KIND=10) / 80-bit long double).
#
# Produces a STATIC archive `${LIB_PREFIX}blas_parallel` (= `eblas_parallel`
# for kind10) that supplies overlay implementations of selected BLAS
# entry points. Step 0 ships only a passthrough stub for egemm_ that
# forwards to the migrated archive's renamed symbol `egemm_migrated_`
# (produced by the objcopy rename in step 0b). This proves the
# Fortran-ABI C boundary end-to-end before any real kernel work.
#
# Linking model: see doc/parallel-blas/design.md §1. When
# PARALLEL_BLAS=ON, the public `${LIB_PREFIX}blas` target is rewired
# into an INTERFACE composite that links `_parallel` before `_serial`
# so overlay symbols win. This file builds the `_parallel` half only.

set(_kernels
    egemm.c
    ygemm.c
    egemmtr.c
    ygemmtr.c
    etrsm.c
    ytrsm.c
    etrmm.c
    ytrmm.c
    esyrk.c
    ysyrk.c
    yherk.c
    esyr2k.c
    ysyr2k.c
    yher2k.c
    egemv.c
    ygemv.c
    eger.c
    ygeru.c
    ygerc.c
    esymv.c
    yhemv.c
    etrsv.c
    ytrsv.c
    esymm.c
    ysymm.c
    yhemm.c
    etrmv.c
    ytrmv.c
    esyr.c
    yher.c
    esyr2.c
    yher2.c
    # L1 BLAS — subroutines + functions
    escal.c
    eaxpy.c
    ecopy.c
    eswap.c
    erot.c
    edot.c
    enrm2.c
    easum.c
    yscal.c
    yescal.c
    yaxpy.c
    ycopy.c
    yswap.c
    yerot.c
    ydotu.c
    ydotc.c
    eynrm2.c
    eyasum.c
    # L2 banded — general
    egbmv.c
    ygbmv.c
    # L2 banded — symmetric / Hermitian
    esbmv.c
    yhbmv.c
    # L2 packed — symmetric / Hermitian mat-vec
    espmv.c
    yhpmv.c
    # L2 banded — triangular mat-vec / solve
    etbmv.c
    ytbmv.c
    etbsv.c
    ytbsv.c
    # L2 packed — triangular mat-vec / solve
    etpmv.c
    ytpmv.c
    etpsv.c
    ytpsv.c
    # L2 packed — sym/Herm rank-1 + rank-2
    espr.c
    yhpr.c
    espr2.c
    yhpr2.c
    # L1 misc — cabs1, iamax, Givens generators
    ecabs1.c
    ieamax.c
    iyamax.c
    erotg.c
    erotm.c
    erotmg.c
    yrotg.c
)

# Publish the overlay-covered routine names so the BLAS section in
# cmake/CMakeLists.txt knows what to rename in the consistency archive.
# Strip the .c suffix from each kernel filename.
set(_routines "")
foreach(_k ${_kernels})
    string(REGEX REPLACE "\\.c$" "" _r "${_k}")
    list(APPEND _routines "${_r}")
endforeach()
set(PARALLEL_BLAS_OVERLAY_ROUTINES "${_routines}" CACHE INTERNAL
    "BLAS routines provided by the parallel overlay for this target")

add_library(${LIB_PREFIX}blas_parallel STATIC ${_kernels})

target_compile_features(${LIB_PREFIX}blas_parallel PRIVATE c_std_99)
target_compile_options(${LIB_PREFIX}blas_parallel PRIVATE
    -O3
    -ffp-contract=fast
    # Use Fortran-style complex arithmetic (skip NaN/Inf checks).
    # Without this, gcc emits __mulxc3/__divxc3 library calls for
    # _Complex long double — measurably slower than the gfortran
    # path used by the migrated archive (e.g. ytrsm OMP=1 was 30%
    # behind migrated until this flag landed).
    -fcx-fortran-rules
)
# -march comes from src/parallel_blas/CMakeLists.txt (shared knob).
if(NOT "${PARALLEL_BLAS_MARCH}" STREQUAL "")
    target_compile_options(${LIB_PREFIX}blas_parallel PRIVATE
        -march=${PARALLEL_BLAS_MARCH})
endif()

# OpenMP comes in at step 4. Wire it now so the per-kernel #pragmas
# compile from the start.
if(OpenMP_C_FOUND)
    target_link_libraries(${LIB_PREFIX}blas_parallel PUBLIC OpenMP::OpenMP_C)
endif()

# Symbols this archive REFERS to (and the future composite resolves):
# the migrated archive renamed via objcopy in step 0b. We don't link
# anything here — the static archive can carry unresolved externals;
# they're satisfied at executable link time by the composite.
